# IS2-calval

./: .gitignore  GPS_vs_ATM.py  IS2_vs_ATM.py  IS2_vs_GPS.py  LICENSE  README.md  make_polehole_differences.py  pixi.toml  pyproject.toml
IS2_calval/: GPS_vs_ATM.py  IS2_vs_ATM.py  IS2_vs_GPS.py  __init__.py  check_atl12_dot.py  check_atl12_pairs.py  fit.py  io.py  ocean_scans.py  polehole_diff.py  tech_ref_events.py  utilities.py
